[tool.poetry]
name = "bros"
version = "0.1.0"
description = ""
authors = ["Igor Prochazka <igor.prochazka@intelygenz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
requests = "^2.32.3"
polars = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
